[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A CalDAV server"
repository = "https://github.com/lennart-k/rustical"

[package]
name = "rustical"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
resolver = "2"
publish = false

[features]
debug = ["opentelemetry"]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-semantic-conventions",
  "dep:tracing-opentelemetry",
]

[profile.dev]
debug = 0

[workspace.dependencies]
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
async-trait = "0.1"
actix-web = "4.9"
tracing = { version = "0.1", features = ["async-await"] }
tracing-actix-web = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web-httpauth = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["serde_derive", "derive", "rc"] }
futures-util = "0.3"
password-auth = { version = "1.0", features = ["argon2", "pbkdf2"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.9", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.5"
rstest = "0.24"
rstest_reuse = "0.7"
sha2 = "0.10"
tokio = { version = "1", features = [
  "net",
  "tracing",
  "macros",
  "rt-multi-thread",
  "full",
] }
url = "2.5"
base64 = "0.22"
thiserror = "2.0"
quick-xml = { version = "0.37" }
rust-embed = "8.5"
futures-core = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
mime_guess = "2.0.5"
itertools = "0.14"
log = "0.4"
derive_more = { version = "1.0", features = [
  "from",
  "try_into",
  "into",
  "deref",
  "constructor",
] }
askama = { version = "0.12", features = [
  "serde",
  "with-actix-web",
  "serde-json",
  "serde-yaml",
] }
askama_actix = "0.14"
sqlx = { version = "0.8", default-features = false, features = [
  "sqlx-sqlite",
  "uuid",
  "chrono",
  "sqlite",
  "runtime-tokio",
  "macros",
  "migrate",
] }
sqlx-sqlite = { version = "0.8", features = ["bundled"] }
ical = { version = "0.11", features = ["generator", "serde"] }
toml = "0.8"
rustical_dav = { path = "./crates/dav/" }
rustical_store = { path = "./crates/store/" }
rustical_store_sqlite = { path = "./crates/store_sqlite/" }
rustical_caldav = { path = "./crates/caldav/" }
rustical_carddav = { path = "./crates/carddav/" }
rustical_frontend = { path = "./crates/frontend/" }
rustical_xml = { path = "./crates/xml/" }
rustical_nextcloud_login = { path = "./crates/nextcloud_login/" }
chrono-tz = "0.10"
rand = "0.8"
argon2 = "0.5"
rpassword = "7.3"
password-hash = { version = "0.5" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"
darling = "0.20"
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "charset",
  "http2",
], default-features = false }
dashmap = "6.1"

[dependencies]
rustical_store = { workspace = true }
rustical_store_sqlite = { workspace = true }
rustical_caldav = { workspace = true }
rustical_carddav = { workspace = true }
rustical_frontend = { workspace = true }
actix-web = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { workspace = true }
async-trait = { workspace = true }
tracing-actix-web = { workspace = true }
uuid.workspace = true
dashmap.workspace = true

opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = [
  "rt-tokio",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "registry",
] }

figment = { version = "0.10", features = ["env", "toml"] }

rand.workspace = true
rpassword.workspace = true
argon2.workspace = true
pbkdf2.workspace = true
password-hash.workspace = true
reqwest.workspace = true
rustical_dav.workspace = true
rustical_nextcloud_login.workspace = true
quick-xml.workspace = true
