[package]
name = "rustical_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-httpauth = "0.8.0"
derive_more = "0.99.17"
futures-util = "0.3.28"
password-auth = "1.0.0"
serde = { version = "1.0.188", features = ["derive"] }
