[package]
name = "rustical_carddav"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[dependencies]
actix-web = "4.9"
actix-web-httpauth = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.22"
futures-util = "0.3"
quick-xml = { version = "0.36", features = [
  "serde",
  "serde-types",
  "serialize",
] }
roxmltree = "0.20"
rustical_store = { path = "../store/" }
rustical_dav = { path = "../dav/" }
serde = { version = "1.0", features = ["serde_derive", "derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "full"] }
async-trait = "0.1"
thiserror = "1.0"
strum = { version = "0.26", features = ["strum_macros", "derive"] }
