[package]
name = "rustical_dav"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[features]
[dependencies]
axum = { version = "0.8" }
tower = { version = "0.5" }
axum-extra.workspace = true

rustical_xml.workspace = true
async-trait.workspace = true
futures-util.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
itertools.workspace = true
log.workspace = true
derive_more.workspace = true
tracing.workspace = true
tokio.workspace = true
http.workspace = true
headers.workspace = true
