[package]
name = "rustical_dav_push"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rustical_xml.workspace = true
async-trait.workspace = true
futures-util.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
itertools.workspace = true
log.workspace = true
derive_more.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
rustical_dav.workspace = true
rustical_store.workspace = true
http.workspace = true
base64.workspace = true
ece.workspace = true
axum.workspace = true
openssl.workspace = true
