[package]
name = "rustical_frontend"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[dependencies]
askama.workspace = true
askama_actix = { workspace = true }
actix-session = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
actix-web = { workspace = true }
rustical_store = { workspace = true }
rust-embed.workspace = true
futures-core.workspace = true
hex.workspace = true
mime_guess.workspace = true
