[package]
name = "rustical_frontend"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
default = []
dev = ["tower-http/fs"]

[dependencies]
tower.workspace = true
http.workspace = true
axum.workspace = true
askama.workspace = true
askama_web.workspace = true
askama_escape.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
rustical_store.workspace = true
rustical_ical.workspace = true
rustical_caldav.workspace = true
rust-embed.workspace = true
futures-core.workspace = true
hex.workspace = true
mime_guess.workspace = true
rand.workspace = true
chrono.workspace = true
chrono-humanize.workspace = true
uuid.workspace = true
url.workspace = true
tracing.workspace = true
rustical_oidc.workspace = true
axum-extra.workspace = true
headers.workspace = true
tower-sessions.workspace = true
percent-encoding.workspace = true
tower-http = { workspace = true, optional = true }
rrule.workspace = true
ical.workspace = true
