[package]
name = "rustical_ical"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[features]
actix = ["dep:actix-web"]

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
derive_more.workspace = true
rustical_xml.workspace = true
ical.workspace = true
lazy_static.workspace = true
regex.workspace = true
rrule.workspace = true
serde.workspace = true
sha2.workspace = true
actix-web = { workspace = true, optional = true }
