[package]
name = "rustical_ical"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false


[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
derive_more.workspace = true
rustical_xml.workspace = true
ical.workspace = true
regex.workspace = true
rrule.workspace = true
serde.workspace = true
sha2.workspace = true
axum.workspace = true
