[package]
name = "rustical_oidc"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
openidconnect.workspace = true
serde.workspace = true
reqwest.workspace = true
thiserror.workspace = true
async-trait.workspace = true
axum.workspace = true
tower-sessions = "0.14"
axum-extra.workspace = true
headers.workspace = true
