[package]
name = "rustical_oidc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
openidconnect.workspace = true
serde.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"] }
thiserror.workspace = true
async-trait.workspace = true
axum.workspace = true
tower-sessions.workspace = true
axum-extra.workspace = true
headers.workspace = true
tracing.workspace = true
