[package]
name = "rustical_store"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
ical = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
actix-web = { workspace = true }
actix-session = { workspace = true }
actix-web-httpauth = { workspace = true }
tracing = { workspace = true }
chrono-tz = { workspace = true }
derive_more = { workspace = true }
rustical_xml.workspace = true
tokio.workspace = true
rand.workspace = true
uuid.workspace = true
clap.workspace = true
rustical_dav.workspace = true
strum.workspace = true
strum_macros.workspace = true
rustical_ical.workspace = true
rrule = "0.14"

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }
rustical_store_sqlite.workspace = true
tokio.workspace = true
