[package]
name = "rustical_store"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
sha2.workspace = true
ical.workspace = true
chrono.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono-tz.workspace = true
derive_more = { workspace = true, features = ["as_ref"] }
rustical_xml.workspace = true
tokio.workspace = true
clap.workspace = true
rustical_dav.workspace = true
rustical_ical.workspace = true
axum.workspace = true
http.workspace = true
rrule.workspace = true
headers.workspace = true
tower.workspace = true
futures-core.workspace = true
tower-sessions.workspace = true
vtimezones-rs.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
rustical_store_sqlite.workspace = true
tokio.workspace = true
