[package]
name = "rustical_store_sqlite"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio.workspace = true
rustical_store = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
derive_more.workspace = true
chrono.workspace = true
password-auth.workspace = true
password-hash.workspace = true
uuid.workspace = true
pbkdf2.workspace = true
rustical_ical.workspace = true
