[package]
name = "rustical_store_sqlite"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
test = ["dep:rstest"]

[[bench]]
name = "insert_calendar_object"
harness = false

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[dependencies]
tokio.workspace = true
rustical_store.workspace = true
async-trait.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive_more.workspace = true
chrono.workspace = true
password-auth.workspace = true
password-hash.workspace = true
uuid.workspace = true
pbkdf2.workspace = true
rustical_ical.workspace = true
rstest = { workspace = true, optional = true }
sha2.workspace = true
