[package]
name = "rustical_webhooks"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false


[dependencies]
serde_json.workspace = true
serde.workspace = true
rustical_ical.workspace = true
rustical_store.workspace = true
tokio.workspace = true
hmac = "0.12.1"
sha2.workspace = true
base64.workspace = true
axum.workspace = true
http.workspace = true
reqwest.workspace = true
rustical_types.workspace = true
