[package]
name = "rustical_xml"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
xml_derive = { path = "./derive" }
