[package]
name = "xml_derive"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true
darling.workspace = true
itertools.workspace = true
